more i18n. Translation comments have been reworked. code in main to load i18n has been modified a bit too, though it still needs to be tested

--- a/doc/TODO
+++ b/doc/TODO
@@ -24,3 +24,4 @@ supposed to be integrated in blockem at some point in the future:
  + Add default button to the new/config dialog
  + Convert std::lists to standard arrays in Piece
  + i18n
+ + cachegrind to profile (instead of gprof)
