--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,6 @@
+: Version 0.2.4
+    - About Dialog contains the URL of the project
+
 19/07/2010: Version 0.2.3
     - Around 20% performance improvement of Minimax algorithm since 0.2.2
       using precalculated arrays of nucleation points and forbidden areas
