--- a/challenges/README
+++ b/challenges/README
@@ -1,11 +1,18 @@
 This directory contains a set of .xml. Each one of them defines a specific 
 challenge that can be loaded on the application to be played
 
-Format of these XML files is defined in challenge.dtd, in this directory. 
-There is also an example challenge in the file "example_challenge.xml" which 
-can be used as a starting point to write your own blockem challenges. It 
-contains quite a lot of comments that are supposed to explain each one of the
-options that define a blockem challenge
+Format of these XML files is defined in blockem_challenge.dtd, in this
+directory. There is also an example challenge in the file 
+"example_challenge.xml" which can be used as a starting point to write your 
+own blockem challenges. It contains quite a lot of comments that are 
+supposed to explain each one of the options that define a blockem challenge
+
+If you want to validate your xml you can use the xmllint program included 
+with libxml. For example:
+    xmllint --valid --noout example_challenge.xml
+
+The --dtdvalid dtd allows validation of the document(s) against a given DTD.
+If the DTD is specified inside the .xml file there is no need for this option
 
 have fun!
  
