--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -6,9 +6,8 @@
     - New configuration file in xml format which is loaded at start-up. At the
       moment it is only used to set the language on windows platforms but it 
       could be easily expanded in future
-    - Format of blockem challenges has been design. Next version (0.3.1) is 
+    - Format of blockem challenges has been designed. Next version (0.3.1) is 
       expected to add support to play these challenges on the GUI
-      can be designed before adding support for them in next release
     - Bug fixed in win32 platforms: Bogus handling of i18n in command line 
       arguments
 
