--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,4 +1,4 @@
-: Version 0.3.0
+16/10/2010: Version 0.3.0
     - Major refactoring on GUI handling. New games can be added easier into 
       the Main Window. New Game dialog redesigned too.
     - Total allocation mode available on GUI. Player is requested to put down 
