--- a/doc/TODO
+++ b/doc/TODO
@@ -22,9 +22,16 @@ supposed to be integrated in blockem at some point in the future:
  + Convert std::lists to standard arrays in Piece
  + cachegrind to profile (instead of gprof)
  + complete rules_test
+ + board drqwing area can't handle non square boards. Fix that
  + stopwatches in total allocation game and 1vs1 game are counting even if 
    the widget is showing nothing. It doesn't really affect performance, but
    it's an ugly thing to do
  + support for non-square shaped boards (is it even good?)
  + scripts should store results into scripts/ directory. Should gprof and
    gcov output be uploaded into the svn repository?
+ + WARNINGS compiling:
+       gui_game1v1_widget.cpp:477: warning: enumeration value ‘e_Game1v1NoPlayer’ not handled in switch
+       blockem_challenge_test.cpp: In member function ‘void BlockemChallengeTest::LoadAndCheckValidChallenge1()’:
+       blockem_challenge_test.cpp:253: warning: unused variable ‘challengeInfo’
+       blockem_challenge_test.cpp: In member function ‘void BlockemChallengeTest::LoadAndCheckValidChallenge2()’:
+       blockem_challenge_test.cpp:320: warning: unused variable ‘challengeInfo’
