--- a/doc/TODO
+++ b/doc/TODO
@@ -30,6 +30,7 @@ supposed to be integrated in blockem at some point in the future:
  + scripts should store results into scripts/ directory. Should gprof and
    gcov output be uploaded into the svn repository?
  + WARNINGS compiling:
+       game1v1.cpp:510: warning: enumeration value ‘e_Game1v1NoPlayer’ not handled in switch
        gui_game1v1_widget.cpp:477: warning: enumeration value ‘e_Game1v1NoPlayer’ not handled in switch
        blockem_challenge_test.cpp: In member function ‘void BlockemChallengeTest::LoadAndCheckValidChallenge1()’:
        blockem_challenge_test.cpp:253: warning: unused variable ‘challengeInfo’
