--- a/po/es.po
+++ b/po/es.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: blockem 0.3.0\n"
 "Report-Msgid-Bugs-To: frechilla@gmail.com\n"
 "POT-Creation-Date: 2010-10-23 11:52+0200\n"
-"PO-Revision-Date: 2010-10-29 20:31+0100\n"
+"PO-Revision-Date: 2010-10-29 21:48+0100\n"
 "Last-Translator: Faustino Frechilla <frechilla@gmail.com>\n"
 "Language-Team: Spanish\n"
 "MIME-Version: 1.0\n"
@@ -1253,7 +1253,7 @@ msgstr "Selecciona un archivo .xml de reto blockem"
 
 #: src/gui.glade:1608
 msgid "Author:"
-msgstr "Autor"
+msgstr "Autor:"
 
 #: src/gui.glade:1620
 msgid "E-Mail:"
@@ -1277,7 +1277,7 @@ msgstr "Posiciones ocupadas:"
 
 #: src/gui.glade:1704
 msgid "challenger's:"
-msgstr "aspirante"
+msgstr "del aspirante:"
 
 #: src/gui.glade:1785
 msgid "Challenge's info"
