--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,9 @@
+: Version 0.3.2
+    - removed "parser error" messages shown at startup when blockem wrongly 
+      tries to load a .dtd file as .xml. Blockem will only try to load
+      those files located at $(extension)/blockem/challenges which end up 
+      with ".xml"
+
 29/10/2010: Version 0.3.1
     - Added support for non-square shaped boards (they can be used now in total
       deployment games)
