--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -3,6 +3,10 @@
       tries to load a .dtd file as .xml. Blockem will only try to load
       those files located at $(extension)/blockem/challenges which end up 
       with ".xml"
+    - 4 players game supported. All players must be humans since there is no
+      AI implemented yet. 
+    - Fixed error transferring starting coords settings showed in the new 
+      total allocation game dialog to the actual game engine
 
 29/10/2010: Version 0.3.1
     - Added support for non-square shaped boards (they can be used now in total
