--- a/doc/TODO
+++ b/doc/TODO
@@ -33,3 +33,4 @@ supposed to be integrated in blockem at some point in the future:
  + It would be really nice to the blockem rules translated into the actual 
    blockem game so anybody could have a look without browsing to the website
  + Allow the user to hide non-moving players's pieces
+ + Add a way to mark which challenges are 'completed' by the user
